--- a/index.html
+++ b/index.html
@@ -5,9 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment1</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+   
+   <section>
+    <div class="hero-image">
+        <div class="hero-text">
+            <h1>Let's Help Those Who Are <br> Morer In need</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore <br> expedita vero  quod qui esse iusto impedit.</p>
+            <a class="button" href="#">Donate Now</a>
+        </div>
+    </div>
+   </section>
+
 </body>
 </html>
