--- a/index.html
+++ b/index.html
@@ -13,13 +13,21 @@
 <body>
    
    <section>
-    <div class="hero-image">
-        <div class="hero-text">
-            <h1>Let's Help Those Who Are <br> Morer In need</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore <br> expedita vero  quod qui esse iusto impedit.</p>
-            <a class="button" href="#">Donate Now</a>
-        </div>
-    </div>
+       <div class="hero-image">
+            <div class="hero-text">
+              <h1>Let's Help Those Who Are <br> <span class="header-text">More In need</span> </h1>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore <br>expedita  vero  quod qui esse iusto impedit adipisicing.</p>
+              <a class="button" href="#">Donate Now</a>
+            </div>
+       </div>
+    </section>
+
+   <section class="price">   
+       <div class="price-1">100tk</div>
+       <div class="price-2">200tk</div>
+       <div class="price-3">500tk</div>
+       <div class="price-4">1000tk</div>
+       <div class="price-5">5000tk</div>
    </section>
 
 </body>
