--- a/index.html
+++ b/index.html
@@ -22,12 +22,15 @@
        </div>
     </section>
 
-   <section class="price">   
-       <div class="price-1">100tk</div>
-       <div class="price-2">200tk</div>
-       <div class="price-3">500tk</div>
-       <div class="price-4">1000tk</div>
-       <div class="price-5">5000tk</div>
+   <section class="pricing">   
+       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, quas facilis quos quia eligendi explicabo dolores maxime! Qui aliquam enim officiis! Porro quia ad perspiciatis hic sed? Accusantium, veniam aperiam?</p>
+
+     
+       <div class="price price-1">100tk</div>
+       <div class="price price-2">200tk</div>
+       <div class="price price-1">500tk</div>
+       <div class="price price-1">1000tk</div>
+       <div class="price">5000tk</div>
    </section>
 
 </body>
