--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Assignment1</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -22,15 +22,52 @@
        </div>
     </section>
 
-   <section class="pricing">   
-       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, quas facilis quos quia eligendi explicabo dolores maxime! Qui aliquam enim officiis! Porro quia ad perspiciatis hic sed? Accusantium, veniam aperiam?</p>
-
-     
-       <div class="price price-1">100tk</div>
-       <div class="price price-2">200tk</div>
-       <div class="price price-1">500tk</div>
-       <div class="price price-1">1000tk</div>
-       <div class="price">5000tk</div>
+   <section  class="text-1">
+    <div>
+        <h1>Donate Today</h1>
+        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur,at eam falli <br>
+         deterruisset. No duo populo animal nouisse, enim</p>
+    </div>
+      <section class="pricing">   
+           <div class="price price-1">100tk</div>
+           <div class="price price-2">200tk</div>
+           <div class="price price-1">500tk</div>
+           <div class="price price-1">1000tk</div>
+           <div class="price">5000tk</div>
+       </section>
+        <div class="input-data">
+            <input type="text" placeholder="Other Amount (Taka)"> <br>
+            <a class="button btn-2" href="#">Donate Now</a>
+        </div>
+   </section>
+   <section>
+       <div class="text-1">
+        <h1>Our Donate Plan</h1>
+        <p>
+         Lorem ipsum dolor sit amet, usu cu esse possit referrentur,at eam falli <br>
+         deterruisset. No duo populo animal nouisse, enim
+        </p>
+       </div>
+       <section class="price-plan">
+            <div class="plan common bg-1">
+                <img src="food.png" alt="">
+                <h2>Food for a family</h2>
+                <p>Amet minim mollit non deserunt <br> ullamco est sit aliqua dolor do amet <br>  sint. Velit 
+                    officia consequat duis enim <br> velit mollit.</p>
+            </div>
+            <div class="plan common bg-2">
+                <img src="shelter.png" alt="">
+                <h2>Shelter for a family</h2>
+                <p>Amet minim mollit non deserunt <br> ullamco est sit aliqua dolor do amet <br>  sint. Velit 
+                    officia consequat duis enim <br> velit mollit.</p>
+            </div>
+            <div class="plan bg-3">
+                <img src="Frame-1.png" alt="">
+                <h2>Education for a child</h2>
+                <p>Amet minim mollit non deserunt <br> ullamco est sit aliqua dolor do amet <br>  sint. Velit 
+                    officia consequat duis enim <br> velit mollit.</p>
+            </div>
+       </section>
    </section>
 
 </body>
