--- a/index.html
+++ b/index.html
@@ -70,5 +70,18 @@
        </section>
    </section>
 
+   <section class="flood">
+       <div class="img">
+           <img src="donation9.jpg" alt="">
+       </div>
+       <div class="text">
+           <h1>They need our help <br> to survive</h1>
+           <p>Though 80% of Bangladesh is a flood plain, and <br> floods can be common,  today’s 
+               disaster is one <br> of the worst in decades. Millions of already-poor <br><br> people have been 
+               left stranded and <br> need urgent help if they are to survive.</p>
+               <a class="button btn-3" href="#">How to contribute?</a>
+       </div>
+   </section>
+
 </body>
 </html>
