--- a/index.html
+++ b/index.html
@@ -83,5 +83,14 @@
        </div>
    </section>
 
+   <section>
+      <div class="container">
+        <div class="box">
+            <input type="text" placeholder="Email">
+            <input type="submit" value="Subscribe">
+           </div>
+      </div>
+   </section>
+
 </body>
 </html>
