--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment1</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -84,13 +84,24 @@
    </section>
 
    <section>
-      <div class="container">
-        <div class="box">
-            <input type="text" placeholder="Email">
-            <input type="submit" value="Subscribe">
-           </div>
-      </div>
+       <div class="text-1">
+           <h1>Get My Updates</h1>
+           <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur,at eam falli <br>
+            deterruisset. No duo populo animal nouisse, enim
+            </p>
+       </div>
+      <div class="box">
+          <input type="text" placeholder="Email">
+          <input type="submit" value="Subscribe">
+       </div>
    </section>
+   <section>
+       <div class="footer">
+           <h1>Be Humble</h1>
+           <p>I'm gonna do it</p>
+       </div>
+   </section>
+
 
 </body>
 </html>
