--- a/index.html
+++ b/index.html
@@ -1,107 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment1</title>
+    <title>DonateForTheme</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Poppins:wght@400;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-   
-   <section>
-       <div class="hero-image">
+
+    <section>
+        <div class="hero-image">
             <div class="hero-text">
-              <h1>Let's Help Those Who Are <br> <span class="header-text">More In need</span> </h1>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore <br>expedita  vero  quod qui esse iusto impedit adipisicing.</p>
-              <a class="button" href="#">Donate Now</a>
+                <h1>Let's Help Those Who Are <br> <span class="header-text">More In need</span> </h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore <br>expedita vero quod qui esse
+                    iusto impedit adipisicing.</p>
+                <a class="button" href="#">Donate Now</a>
             </div>
-       </div>
+        </div>
     </section>
 
-   <section  class="text-1">
-    <div>
-        <h1>Donate Today</h1>
-        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur,at eam falli <br>
-         deterruisset. No duo populo animal nouisse, enim</p>
-    </div>
-      <section class="pricing">   
-           <div class="price price-1">100tk</div>
-           <div class="price price-2">200tk</div>
-           <div class="price price-1">500tk</div>
-           <div class="price price-1">1000tk</div>
-           <div class="price">5000tk</div>
-       </section>
+    <section class="text-1">
+        <div>
+            <h1>Donate Today</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur,at eam falli <br>
+                deterruisset. No duo populo animal nouisse, enim</p>
+        </div>
+        <section class="pricing">
+            <div class="price price-1">100tk</div>
+            <div class="price price-2">200tk</div>
+            <div class="price price-1">500tk</div>
+            <div class="price price-1">1000tk</div>
+            <div class="price">5000tk</div>
+        </section>
         <div class="input-data">
             <input type="text" placeholder="Other Amount (Taka)"> <br>
             <a class="button btn-2" href="#">Donate Now</a>
         </div>
-   </section>
-   <section>
-       <div class="text-1">
-        <h1>Our Donate Plan</h1>
-        <p>
-         Lorem ipsum dolor sit amet, usu cu esse possit referrentur,at eam falli <br>
-         deterruisset. No duo populo animal nouisse, enim
-        </p>
-       </div>
-       <section class="price-plan">
+    </section>
+    <section>
+        <div class="text-1">
+            <h1>Our Donate Plan</h1>
+            <p>
+                Lorem ipsum dolor sit amet, usu cu esse possit referrentur,at eam falli <br>
+                deterruisset. No duo populo animal nouisse, enim
+            </p>
+        </div>
+        <section class="price-plan">
             <div class="plan common bg-1">
                 <img src="food.png" alt="">
                 <h2>Food for a family</h2>
-                <p>Amet minim mollit non deserunt <br> ullamco est sit aliqua dolor do amet <br>  sint. Velit 
+                <p>Amet minim mollit non deserunt <br> ullamco est sit aliqua dolor do amet <br> sint. Velit
                     officia consequat duis enim <br> velit mollit.</p>
             </div>
             <div class="plan common bg-2">
                 <img src="shelter.png" alt="">
                 <h2>Shelter for a family</h2>
-                <p>Amet minim mollit non deserunt <br> ullamco est sit aliqua dolor do amet <br>  sint. Velit 
+                <p>Amet minim mollit non deserunt <br> ullamco est sit aliqua dolor do amet <br> sint. Velit
                     officia consequat duis enim <br> velit mollit.</p>
             </div>
             <div class="plan bg-3">
                 <img src="Frame-1.png" alt="">
                 <h2>Education for a child</h2>
-                <p>Amet minim mollit non deserunt <br> ullamco est sit aliqua dolor do amet <br>  sint. Velit 
+                <p>Amet minim mollit non deserunt <br> ullamco est sit aliqua dolor do amet <br> sint. Velit
                     officia consequat duis enim <br> velit mollit.</p>
             </div>
-       </section>
-   </section>
+        </section>
+    </section>
 
-   <section class="flood">
-       <div class="img">
-           <img src="donation13.jpg" alt="">
-       </div>
-       <div class="text">
-           <h1>They need our help <br> to survive</h1>
-           <p>Though 80% of Bangladesh is a flood plain, and <br> floods can be common,  today’s 
-               disaster is one <br> of the worst in decades. Millions of already-poor <br><br> people have been 
-               left stranded and <br> need urgent help if they are to survive.</p>
-               <a class="button btn-3" href="#">How to contribute?</a>
-       </div>
-   </section>
+    <section class="flood">
+        <div class="img">
+            <img src="donation13.jpg" alt="">
+        </div>
+        <div class="text">
+            <h1>They need our help <br> to survive</h1>
+            <p>Though 80% of Bangladesh is a flood plain, and <br> floods can be common, today’s
+                disaster is one <br> of the worst in decades. Millions of already-poor <br><br> people have been
+                left stranded and <br> need urgent help if they are to survive.</p>
+            <a class="button btn-3" href="#">How to contribute?</a>
+        </div>
+    </section>
 
-   <section>
-       <div class="text-1">
-           <h1>Get My Updates</h1>
-           <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur,at eam falli <br>
-            deterruisset. No duo populo animal nouisse, enim
+    <section>
+        <div class="text-1">
+            <h1>Get My Updates</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur,at eam falli <br>
+                deterruisset. No duo populo animal nouisse, enim
             </p>
-       </div>
-      <div class="box">
-          <input type="text" placeholder="Email">
-          <input type="submit" value="Subscribe">
-       </div>
-   </section>
-   <section>
-       <div class="footer">
-           <h1>Be Humble</h1>
-           <p>I'm gonna do it</p>
-       </div>
-   </section>
+        </div>
+        <div class="box">
+            <input type="text" placeholder="Email">
+            <input type="submit" value="Subscribe">
+        </div>
+    </section>
+    <section>
+        <div class="footer">
+            <h1>Be Humble</h1>
+            <p>I'm gonna do it</p>
+        </div>
+    </section>
 
 
 </body>
+
 </html>
