--- a/index.html
+++ b/index.html
@@ -14,16 +14,54 @@
 </head>
 
 <body>
-
+    <!-- Hero Section -->
     <section>
-        <div class="hero-image">
-            <div class="hero-text">
-                <h1>Let's Help Those Who Are <br> <span class="header-text">More In need</span> </h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore <br>expedita vero quod qui esse
-                    iusto impedit adipisicing.</p>
-                <a class="button" href="#">Donate Now</a>
-            </div>
+        <div class="header">
+            <h2 class="logo">Responsive Menu</h2>
+            <input type="checkbox" id="chk">
+            <label for="chk" class="show-menu-btn">
+                <i class="fa fa-ellipsis-h"></i>
+            </label>
+
+            <ul class="menu">
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Services</a>
+                <a href="#">Works</a>
+                <a href="#">Contact</a>
+                <label for="chk" class="hide-menu-btn">
+                    <i class="fa fa-times"></i>
+                </label>
+            </ul>
         </div>
+
+        <!-- <div class="content">
+            <center>
+                <img src="https://images.unsplash.com/photo-1554266183-2696fdafe3ff?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                    alt="">
+            </center>
+            <p>“His passion towards human empowerment is clearly visible,” observes the Prime Minister after the Nobel
+                laureate called on him on Tuesday.
+                Prime Minister Narendra Modi has said he had an “excellent” meeting with Economics Nobel laureate
+                Abhijit Banerjee on October 22. “Excellent meeting with Nobel Laureate Abhijit Banerjee. His passion
+                towards human empowerment is clearly visible. We had a healthy and extensive interaction on various
+                subjects. India is proud of his accomplishments. Wishing him the very best for his future endeavours,”
+                Mr. Modi said in his official Twitter handle. Dr. Banerjee has been a vocal critic of several of the
+                government's economic decisions, including demonetisation, the corporate tax rate cuts, moving items to
+                lower GST rates slabs, to name a few. An Indian-born American professor at the Massachusetts Institute
+                of Technology, he has won the Nobel in Economics, jointly with wife Esther Duflo and Michael Kremer for
+                “experimental approach to alleviating global poverty”. Benjamin Netanyahu gave up his effort to form a
+                new government on Monday after failing to secure a majority coalition, creating an opportunity for
+                centrist rival Benny Gantz to replace Israel's longest serving Prime Minister. Netanyahu, who heads the
+                right-wing Likud party, said he had been unable to form a government following an election in September,
+                and was returning the mandate back to Israel's President Reuven Rivlin. Rivlin said he intends to task
+                Gantz with the job of putting together a new government.Benjamin Netanyahu gave up his effort to form a
+                new government on Monday after failing to secure a majority coalition, creating an opportunity for
+                centrist rival Benny Gantz to replace Israel's longest serving Prime Minister. Netanyahu, who heads the
+                right-wing Likud party, said he had been unable to form a government following an election in September,
+                and was returning the mandate back to Israel's President Reuven Rivlin. Rivlin said he intends to task
+                Gantz with the job of putting together a new government.</p>
+        </div> -->
     </section>
 
     <section class="text-1">
