change hero section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <!-- Hero Section -->
-    <section>
+    <section class="section-1">
         <div class="header">
             <h2 class="logo">Responsive Menu</h2>
             <input type="checkbox" id="chk">
@@ -35,33 +35,20 @@
             </ul>
         </div>
 
-        <!-- <div class="content">
-            <center>
-                <img src="https://images.unsplash.com/photo-1554266183-2696fdafe3ff?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+        <div class="hero">
+            <div class="hero-right">
+                <h1>HELP TO REBUILD UKRAINE</h1>
+                <p>We help Ukrainians to survive these hard times. To be safe and healthy, to get life supplies and to
+                    renovate the country’s economy and infrastructure.</p> <br>
+                <button>Donate Now</button>
+                <button>About Our Charity</button>
+            </div>
+            <div class="hero-left">
+                <img src="https://uploads-ssl.webflow.com/62c1d2c008f41181807c045f/62d10f466c67f6a5c93821da_ua_1000x750.png"
                     alt="">
-            </center>
-            <p>“His passion towards human empowerment is clearly visible,” observes the Prime Minister after the Nobel
-                laureate called on him on Tuesday.
-                Prime Minister Narendra Modi has said he had an “excellent” meeting with Economics Nobel laureate
-                Abhijit Banerjee on October 22. “Excellent meeting with Nobel Laureate Abhijit Banerjee. His passion
-                towards human empowerment is clearly visible. We had a healthy and extensive interaction on various
-                subjects. India is proud of his accomplishments. Wishing him the very best for his future endeavours,”
-                Mr. Modi said in his official Twitter handle. Dr. Banerjee has been a vocal critic of several of the
-                government's economic decisions, including demonetisation, the corporate tax rate cuts, moving items to
-                lower GST rates slabs, to name a few. An Indian-born American professor at the Massachusetts Institute
-                of Technology, he has won the Nobel in Economics, jointly with wife Esther Duflo and Michael Kremer for
-                “experimental approach to alleviating global poverty”. Benjamin Netanyahu gave up his effort to form a
-                new government on Monday after failing to secure a majority coalition, creating an opportunity for
-                centrist rival Benny Gantz to replace Israel's longest serving Prime Minister. Netanyahu, who heads the
-                right-wing Likud party, said he had been unable to form a government following an election in September,
-                and was returning the mandate back to Israel's President Reuven Rivlin. Rivlin said he intends to task
-                Gantz with the job of putting together a new government.Benjamin Netanyahu gave up his effort to form a
-                new government on Monday after failing to secure a majority coalition, creating an opportunity for
-                centrist rival Benny Gantz to replace Israel's longest serving Prime Minister. Netanyahu, who heads the
-                right-wing Likud party, said he had been unable to form a government following an election in September,
-                and was returning the mandate back to Israel's President Reuven Rivlin. Rivlin said he intends to task
-                Gantz with the job of putting together a new government.</p>
-        </div> -->
+            </div>
+        </div>
+
     </section>
 
     <section class="text-1">
